Removed paddlepaddle .whl

--- a/.gitignore
+++ b/.gitignore
@@ -60,7 +60,7 @@ test_*.sh
 *.txt
 sample_*
 example_*
-paddlepaddle_gpu*.whl
+paddlepaddle_gpu-3.2.0-cp312-cp312-linux_x86_64.whl
 # Docker
 .dockerignore
 
